syntax = "proto3";
option go_package = "api";
package prepaidcard;

service PrepaidCard {
    rpc topUp (TopUpRequest) returns (Balance);
}

message TopUpRequest {
    string cardID = 1;
    Amount amount = 2;
}

message Amount {
    float value = 1;
}

message Balance {
    float amount = 1;
}
